---------------------------------------------------------------------------------------------------
Version: 0.1.5
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.1.4
Date: 2024-11-12
  Features:
    - Added prototype in _api
    - Added click on label to put signal name at the end of the code editor.
---------------------------------------------------------------------------------------------------
Version: 0.1.3
Date: 2024-11-12
  Bugfixes:
    - Fixed pairs(red/green) not outputting quality signals
    - Fixed normal prefix of signals not returning normal quality signals
    - Fixed concatenate on a nil value on signals
---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 2024-11-09
  Features:
    - Added support for item quality.
---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 2024-11-09
  Bugfixes:
    - Fixed crash on statrup because of change mod name
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 2024-11-09
  Bugfixes:
    - Fixed crash on startup with factorio version 2.0
---------------------------------------------------------------------------------------------------
Version: 0.0.83
Date: 2022-09-27
  Bugfixes:
    - Fix errors on hidden-item and nil signals, which seem to happen in Space Exploration mod.

---------------------------------------------------------------------------------------------------
Version: 0.0.82
Date: 2022-06-25
  Bugfixes:
    - Fix main GUI code textbox having two scrollbars.

---------------------------------------------------------------------------------------------------
Version: 0.0.81
Date: 2022-06-22
  Features:
    - Add remote.call('mlc', 'run', <uid>[, <count>]) interface for benchmarking with /measured-command.
