@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.5
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed Recipe signals not working
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.4
 Date: 2024-11-12
